kubernetes/apps/pinepods/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinepods
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - pinepods.immortalkeep.com
      secretName: pinepods-ingress-tls
  rules:
  - host: pinepods.immortalkeep.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pinepods
            port:
              number: 8040
